# BeatTheBotChallenge

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  biicode.conf  robot.cpp
arduino/: arduino.ino
database/: dispatch.php
ext/gmock/: CMakeLists.txt
src/ext/gmock/: CMakeLists.txt
src/main/: BeatTheBotChallenge.cpp  BeatTheBotChallengeTrainer.cpp  DynamicDetector.cpp  DynamicDetector.hpp  ExactDetector.cpp  ExactDetector.hpp  Files.cpp  Files.hpp  ObstacleDetector.cpp  ObstacleDetector.hpp  PhoneBorderDetector.cpp  PhoneBorderDetector.hpp  Serial.cpp  Serial.hpp  StaticDetector.cpp  StaticDetector.hpp  foo  foo.cpp  robot.cpp  webcam.cpp
src/test/: DynamicDetectorTest.cpp  ObstacleDetectorTest.cpp  RoadDetectorTest.cpp  StaticDetectorTest.cpp  test.cpp
